--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/MH15/neanderthal#readme",
   "devDependencies": {
+    "front-matter": "^4.0.2",
     "fs-extra": "^8.1.0",
     "marked": "^1.1.0",
-    "mustache": "^4.0.1"
+    "mustache": "^4.0.1",
+    "nunjucks": "^3.2.1"
   }
 }
