--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "core/build.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node core/build.js",
-    "serve": "cd build && static-server"
+    "serve": "cd build && static-server",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,23 @@
     "url": "https://github.com/MH15/neanderthal/issues"
   },
   "homepage": "https://github.com/MH15/neanderthal#readme",
-  "devDependencies": {
+  "dependencies": {
+    "ansi-colors": "^4.1.1",
     "front-matter": "^4.0.2",
     "fs-extra": "^8.1.0",
     "marked": "^1.1.0",
     "mustache": "^4.0.1",
     "nunjucks": "^3.2.1",
-    "static-server": "^2.2.1"
+    "static-server": "^2.2.1",
+    "terminal-link": "^2.1.1",
+    "yesno": "^0.3.1"
+  },
+  "bin": {
+    "neanderthal": "./cli.js"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.1",
+    "@types/node": "^14.0.13",
+    "typescript": "^3.9.5"
   }
 }
