--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nunjucks": "^3.2.1",
     "static-server": "^2.2.1",
     "terminal-link": "^2.1.1",
-    "yesno": "^0.3.1"
+    "yesno": "^0.3.1",
+    "source-map-support": "^0.5.19"
   },
   "bin": {
     "neanderthal": "./cli.js"
@@ -35,7 +36,6 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.0.13",
-    "source-map-support": "^0.5.19",
     "typescript": "^3.9.5"
   }
 }
