--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "@types/fs-extra": "^9.0.1",
     "@types/node": "^14.0.13",
     "typescript": "^3.9.5"
-  }
+  },
+  "files": [
+    "build"
+  ]
 }
