--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "static blog machine",
   "main": "cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jasmine"
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,9 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
+    "@types/jasmine": "^3.5.11",
     "@types/node": "^14.0.13",
+    "jasmine": "^3.5.0",
     "typescript": "^3.9.5"
   },
   "files": [
