New server dependency and render index properly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "downlevelIteration": true,
         // "target": "ES5",
         // "moduleResolution": "node"
+        "esModuleInterop": true
     },
     "include": [
         "src/**/*"
