--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "marked": "^1.1.0",
     "node-watch": "^0.6.4",
     "nunjucks": "^3.2.1",
-    "static-server": "^2.2.1",
+    "serve-handler": "^6.1.3",
+    "source-map-support": "^0.5.19",
     "terminal-link": "^2.1.1",
-    "yesno": "^0.3.1",
-    "source-map-support": "^0.5.19"
+    "yesno": "^0.3.1"
   },
   "bin": {
     "neanderthal": "./cli.js"
@@ -36,6 +36,7 @@
     "@types/fs-extra": "^9.0.1",
     "@types/jasmine": "^3.5.11",
     "@types/node": "^14.0.13",
+    "@types/serve-handler": "^6.1.0",
     "jasmine": "^3.5.0",
     "typescript": "^3.9.5"
   },
