--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "ansi-colors": "^4.1.1",
     "front-matter": "^4.0.2",
     "fs-extra": "^8.1.0",
+    "markdown-it": "^11.0.0",
+    "markdown-it-footnote": "^3.0.2",
     "marked": "^1.1.0",
     "node-watch": "^0.6.4",
     "nunjucks": "^3.2.1",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
     "@types/jasmine": "^3.5.11",
+    "@types/markdown-it": "^10.0.1",
     "@types/node": "^14.0.13",
     "@types/serve-handler": "^6.1.0",
     "jasmine": "^3.5.0",
