--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ansi-colors": "^4.1.1",
     "front-matter": "^4.0.2",
     "fs-extra": "^8.1.0",
+    "highlight.js": "^10.1.1",
     "markdown-it": "^11.0.0",
     "markdown-it-footnote": "^3.0.2",
     "node-watch": "^0.6.4",
