--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
+    "@types/highlightjs": "^9.12.0",
     "@types/jasmine": "^3.5.11",
     "@types/markdown-it": "^10.0.1",
     "@types/node": "^14.0.13",
