--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "markdown-it": "^11.0.0",
     "markdown-it-footnote": "^3.0.2",
     "node-watch": "^0.6.4",
-    "nunjucks": "^3.2.1",
+    "nunjucks": "^3.2.2",
     "serve-handler": "^6.1.3",
     "source-map-support": "^0.5.19",
     "terminal-link": "^2.1.1",
@@ -39,6 +39,7 @@
     "@types/jasmine": "^3.5.11",
     "@types/markdown-it": "^10.0.1",
     "@types/node": "^14.0.13",
+    "@types/nunjucks": "^3.1.3",
     "@types/serve-handler": "^6.1.0",
     "jasmine": "^3.5.0",
     "typescript": "^3.9.5"
