--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "cli.js",
   "scripts": {
     "build": "tsc",
-    "test": "jasmine"
+    "test": "uvu -r ts-node/register tests"
   },
   "repository": {
     "type": "git",
@@ -41,7 +41,9 @@
     "@types/node": "^14.0.13",
     "@types/nunjucks": "^3.1.3",
     "@types/serve-handler": "^6.1.0",
-    "typescript": "^3.9.5"
+    "ts-node": "^9.1.1",
+    "typescript": "^3.9.5",
+    "uvu": "^0.5.1"
   },
   "files": [
     "build",
