--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "cli.js",
   "scripts": {
     "build": "tsc",
-    "test": "uvu -r ts-node/register tests"
+    "test": "uvu -r ts-node/register tests",
     "link": "npm link"
   },
   "repository": {
@@ -43,7 +43,7 @@
     "@types/nunjucks": "^3.1.3",
     "@types/serve-handler": "^6.1.0",
     "ts-node": "^9.1.1",
-    "uvu": "^0.5.1"
+    "uvu": "^0.5.1",
     "typescript": "^3.9.7"
   },
   "files": [
